# ROS2_AUTOSARAP_Bridge_Converter

./: README.md  client_exe.sh  colcon.sh  kill_routingmanager.sh  server_exe.sh
config/: vsomeip-client.json  vsomeip-server.json
ros/msg/: Dop.msg  Fix.msg  GnssData.msg  Header.msg  PointCloud2.msg  PointField.msg  Position.msg  Quaternion.msg  Sec_nanosec.msg  Str.msg  Tf2_transform.msg  Time.msg  TransformStamped.msg  Vector3.msg
src/franca2ros/franca2ros.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gnss-bridge/: CMakeLists.txt
src/gnss-bridge/src/: abstract_someip_client.h  main.cpp  someip_publisher.h
src/gnss-listener/: CMakeLists.txt
src/gnss-listener/src/: main.cpp
src/gnss-provider/: CMakeLists.txt  package.xml
src/gnss-provider/src/: gnss_someip.h  gpsd_client.h  main.cpp
src/gnss-someip-lib/: CMakeLists.txt
src/gnss-someip-lib/cmake/: FindCommonAPITools.cmake
src/gnss-someip-lib/config/: commonapi.ini.in
src/gnss-someip-lib/src/fidl/: gnss.fdepl  gnss.fidl  types.fidl
src/gnss-someip-lib/src/types/: conversion.h
vsomeip_udp/implementation/configuration/include/: internal.hpp
vsomeip_udp/implementation/service_discovery/include/: message_impl.hpp
vsomeip_udp/implementation/service_discovery/src/: message_impl.cpp  service_discovery_impl.cpp
